--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <body>
   <div id="root"></div>
   <div class="text-center">
-    <a href="https://github.com/GiorgosDrivas/password-generator" title="Github">GitHub
+    <a target="_blank" href="https://github.com/GiorgosDrivas/password-generator" title="Github">GitHub
       repository</a>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
